--- a/dccp/001/index.html
+++ b/dccp/001/index.html
@@ -36,6 +36,19 @@
       <div class="row">
         <div class="col">
           <div class="alert alert-primary">
+            Crear rol del administrador correspondiente al ID del convenio
+          </div>              
+          <div class="text-center">
+            <img src="img/25.png" alt="" class="img-fluid" /> 
+            <img src="img/26.png" alt="" class="img-fluid mt-2" /> 
+            <img src="img/27.png" alt="" class="img-fluid mt-2" /> 
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <div class="alert alert-primary mt-5">
             Configurar el endpoint para consumir el servicio de obtención de información del usuario<br>
             Para staging es <b>http://dominioscert.chilecompra.cl/v1/usuario-tienda</b>
           </div>              
